Border visibility fixed spacing children still wrong

--- a/css/responsiveLayout.css
+++ b/css/responsiveLayout.css
@@ -9,26 +9,25 @@ body {
     display: flex;
     max-width: 1500px;
     margin: auto;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    align-content: space-around;
+    align-content: space-evenly;
     flex-flow: row wrap;
     background-color: burlywood;
 }
 
 .parentElem > .childElem {
     flex: 1 300px;
-    min-width: 300px;
     margin: 16px;
     padding: 5px;
 }
 
 .childElem:nth-child(odd) {
-    border: 1px solid rgb(216, 134, 27);
+    border: 3px solid rgb(216, 134, 27);
     background-color: burlywood;
 }
 
 .childElem:nth-child(even) {
-    border: 1px solid rgb(44, 211, 155);
+    border: 3px solid rgb(44, 211, 155);
     background-color: aquamarine;
 }
